Thu Sep 14 17:20:41 BST 2000 Olly Betts

	* Fixed some compiler warnings in stemmer code.

Thu Sep 14 17:09:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rename QuartzDbBlocks to QuartzDbEntries and finish specifying the
	  interface.  Implementation is incomplete, but compiles.

	  This also removes the duplicate definition which was causing
	  includetest to fail.

	* QuartzDbDiffs now has a non-virtual apply() method - implementation
	  will be identical for all subclasses.

Thu Sep 14 15:06:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix the problem with max_or_terms and termfreqs of 0.  Test
	  maxorterms4 now passes.

Thu Sep 14 15:03:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a test for doing max_or_terms when one of the query terms is
	  not in the database.

Wed Sep 13 19:07:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Small typo in DbTermList::get_termfreq() corrected.  Now works
	  correctly - multiexpand1 passes. :)

Wed Sep 13 18:49:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix apitest so that the OmBatchEnquire::query_desc structure gets
	  created.

	* Attempt to fix DbTermLists handling of term frequencies: if the
	  termfreq was not present it was being mishandled.  However,
	  multiexpand1 still fails. :(

Wed Sep 13 18:05:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzDbTable now has a get_entry_count() method to ... count its
	  entries.  Also added a test for this.

Wed Sep 13 18:02:38 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* includetest.o now compiled with LIBXML_CFLAGS

Wed Sep 13 17:52:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzDbTables now implemented (as maps) and pass testsuite.

Wed Sep 13 17:34:03 BST 2000 Olly Betts

	* test programs can now take a list of tests to on the command line.
